パッチAPI実装
